updated styles  and corrected the api key

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>5-Day Forecast</h2>
         <div id="forecastContainer" class="weather-section"></div>
         <h2>Search History</h2>
-        <ul id="searchHistory"></ul>
+        <div id="searchHistory"></div>
     </div>
 
     <script src="./Assets/js/script.js"></script>
